<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@android:drawable/ic_menu_recent_history"
            android:title="Enrolled courses" />
        <item
            android:id="@+id/nav_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="Schedule of classes" />
        <item
            android:id="@+id/nav_postboard"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="Forum" />
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_menu_login"
            android:title="Login" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="Logout" />
    </group>

</menu>
