<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/search"
        android:title="search"
        android:icon="@drawable/ic_search"
        android:hint="@string/search_hint"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />
    <item
        android:id="@+id/menu1"
        android:orderInCategory="1"
        android:title="2016Fall"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu2"
        android:orderInCategory="2"
        android:title="2016Spring"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu3"
        android:orderInCategory="3"
        android:title="2015Fall"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu4"
        android:orderInCategory="4"
        android:title="2015Spring"
        app:showAsAction="never" />
</menu>
